stylesheet.less
/* ... */
/*
	MENU
*/
.dietary-icon,
.menu .menu-section-item-dietary-props .dietary-icon,
.menu .menu-info .dietary-icon {
	border-radius: 3px;
	font-size: bkscale(@font-swatch5-font-size, 0.9);
	margin-top: 1em;
	padding: 1px 8px;
	color: @font-swatch4-color;
	font-weight:400;
	border:1px dashed @color-swatch5;
}

.menu-item-nutritional-title {
	font-weight: @font-swatch5-font-weight;
}

.menu-name-background {
	margin-bottom:10px;
}

.main .menu-items .inner-item {
	text-align:center;
}

.widget.menu .main {
    width:100%;
}

.menu .menu-subsection li {
	border-radius:5px;
}

.main .menu-items .menu-item {
	border-radius:5px;
}

/*	===============================
	Globals
	=============================== */

::-moz-selection { background-color: fade(@color-swatch3, 85%); }
::selection { background-color: fade(@color-swatch3, 85%); }

body {
	background-color: @color-swatch1;
	background-size: 100% auto;
	background-attachment: fixed;
	-webkit-font-smoothing: antialiased;
	text-rendering: optimizeLegibility;
	background-repeat:no-repeat;
	background-size:cover;
}

.wrapper {
	max-width: 1200px;
	margin: 0 auto;
}

.page-wrap {
	max-width: 1200px;
	margin: 0 auto;
	padding: 0 5%;
	background-color:@color-swatch7;
}

.feature-section {
	margin-bottom:10px;
}

.canvas {
	background-color: darken(@color-swatch1,3%);
	width:100%;
}

.bk-pt-default header.bk-header {
	padding: 50px 0 30px;
	border-bottom: 1px solid lighten(@color-swatch5,30%);
}

.bk-pt-default .canvas {
	background-color:@color-swatch7;
	padding-top: 20px;
}

.main.menu-page {
	padding: 0 8%;
}

.companyname {
	float: right;
	@media @mobile {
		width: 90%;
	}
	a {
		float: right;
		margin-right:5px;
		@media @mobile {
			float: none;
			margin-right: 0;
		}
	}
}

    // Widgets

.main. .widget {
    .clearfix;
}

.widget.companyname a {
	font-size: @font-swatch10-font-size;
	font-weight:@font-swatch10-font-weight;
	float:right;
}

.main {
    .clearfix;
	padding: 1em 0em;
	clear: both;
	text-align:left;
	background-color:@color-swatch7;
	.menu-items {
		column-count: 3;
        column-gap: 80px;
        -moz-column-count: 3;
        -moz-column-gap: 80px; 
        -webkit-column-count: 3;
        -webkit-column-gap: 80px;
		.menu-item {
			padding: 1px 20px 45px;
		}
		li {
			break-inside: avoid;
	        -webkit-column-break-inside: avoid;
	        -moz-column-break-inside: avoid;
	        -ms-column-break-inside: avoid;
	        -o-column-break-inside: avoid;
	        page-break-inside: avoid;
			padding: 1em 1em !important;
		}
		.inner-item {
			.clearfix;
		}
	}
	.menu-subsection {
		list-style: none;
		text-align: center;
		border: 3px solid @color-swatch3;
		h2 {
			color: @color-swatch4;
			font-size: @font-swatch4-font-size;
		}
		.menu-subsection-header {
			margin-bottom: 1em;
			h2 {
				margin-top: 1em;
				line-height: @font-swatch4-line-height;
			}
		}
	}
	.menu-section-header {
		list-style: none;
		clear: both;
		padding: 1em;
		margin-bottom: 1em;
	}
	.menu-item img {
		margin-left: 1em;
		padding: 2px;
		display: none;
	}
	.menu-item-price p {
		color: @color-swatch5;
		font-family: @font-swatch5-font-family;
		font-size: bkscale(@font-swatch5-font-size, 1.1);
	}
	.menu-item-image-wrap{
		width: 100%;
		height: 200px;
		margin-bottom: 10px;
		background-size: cover;
		background-position: center center;
		padding: 2px;
	}
}

// Header

header.bk-header, .nav {
	text-align: center;
	clear: both;
}
header.bk-header {
	width: 100%;
	padding: 50px 0;
	@media @mobile {
		padding: 30px 0;
	}
	.aside, .centre {
		width: 100%;
		a {
			border: 0;
			display: block;
			margin: 0.3em 0 0.1em;
			word-wrap: break-word;
		}
		.clicktocall a {
			color: @color-swatch4;
			font-family:@font-swatch1-font-family;
			font-size: bkscale(@font-swatch5-font-size, 1.2);
			margin: 0;
			padding: 0;
		}
	}
}
.companyheader {
	float: right;
}
.header-section, .footer-section {
	background: fade(@color-swatch5, 10%);
	margin: 0 auto;
	padding: 3em 1em;
	width: 75%;
}

.footer-section .profile {
	padding: 2em 0;
}

header.bk-header, footer.bk-footer {
	h2, .content, h2 > div {
		color: @color-swatch5;
	}
}
.centre {
	text-align: center;
	a {
		color: @color-swatch4;
	}
	svg {
		width: 27px;
		height: 34px;
	}
}
.left {
	text-align: left;
}
.right, .right1 {
	text-align: right;
}
footer.bk-footer {
	padding: 40px 0px;
	width:100%;
	border-top:1px solid @color-swatch1;
}

footer.bk-footer .widget .extendednavigation ul {
	display:block;
}

.right, .right1 {
	float:right;
	text-align:right;
}

.left {
	float:left;
	text-align:left;
}

footer.bk-footer .widget.extendednavigation {
	max-width:100%;
}

.article, .menu-item {
	clear: both;
	small {
		color: lighten(@color-swatch5, 20%);
	}
}

.main .menu-subsection {
	border:0;
	background-color:transparent;
	padding:0;
}

.menu-subsection-wrapper.menu-subsection-promoted {
	background-color: darken(@color-swatch7,5%);
	padding:20px;
}

.menu-item-promoted {
	background-color: darken(@color-swatch7,5%);
}

.menu-subsection {
	clear: both;
}
.menu-description {
	margin-bottom: 10px;
}

.menu-section-item-dietary-props {
	display: block;
}

.clearfix:before,
.clearfix:after {
    content: " ";
    display: table;
}

.clearfix:after {
    clear: both;
}

.clearfix {
    *zoom: 1;
}

header.bk-header .content h4 {
	color:@font-swatch10-color;
}

header.bk-header .header-left .widget.profile span {
	float:none;
}

 .widget.profile span {
    font-family:@font-swatch4-font-family;
    font-weight: @font-swatch4-font-weight;
    line-height:@font-swatch4-line-height;
    letter-spacing: @font-swatch4-letter-spacing;
    font-size: @font-swatch4-font-size;    
}

.bk-profile-address {
	float:right;
}

.bk-profile-address p {
	line-height:@font-swatch4-line-height;
	float:left!important;
	margin-right:5px;
}

/*	===============================
	Design specific
	=============================== */
header.bk-header, footer.bk-footer {
	h2 {
		position: relative;
		display: inline;
	}
}
/* ... */

